# PeristalsisSNN

./: .gitignore  .gitmodules  README.md  pyproject.toml  test_env.ipynb
3d_models/: cylinder_model.stl  description.md  make_data.py
src/: description.md  eval_on_sb3.py  train_on_stable_baselines3.py
src/env/: description.md  peristal_env.py
workspace/: description.md
